@@ -26,7 +26,7 @@ void BilinearForm::eval(real block[], const AffineMap& map) const
   // Do nothing
 }
 //-----------------------------------------------------------------------------
-void BilinearForm::eval(real block[], const AffineMap& map, uint boundary) const
+void BilinearForm::eval(real block[], const AffineMap& map, uint segment) const
 {
   // Do nothing
 }
