@@ -1,3 +1,5 @@
+ - Complete support for general order Lagrange elements in triangles and tetrahedra
+ - Add test problem in src/demo/fem/convergence/ for general Lagrange elements
  - Make FEM::assemble() estimate the number of nonzeros in each row
  - Implement Matrix::init(M, N, nzmax)
  - Add Matrix::nz(), Matrix::nzsum() and Matrix::nzmax()
